# middleman-sdk

./: .env.test.sample  .gitignore  CHANGELOG.md  CLAUDE.md  README-for-developer.md  README-ja.md  README.md  pyproject.toml  setup.cfg
.cursor/rules/: langchaintool.mdc  readme.mdc
.github/workflows/: ci.yaml  test.yml
examples/client_usage/: main.py  sample.docx  sample.xlsx  sample_template.pptx
examples/json_to_pptx_agent/: .env.sample  README.md  pyproject.toml  sample_template.pptx
examples/json_to_pptx_agent/src/json_to_pptx_agent/: agent.py
examples/langchain_tools/: main.py
examples/md_to_docx_agent/: README.md  pyproject.toml
examples/md_to_docx_agent/src/md_to_docx_agent/: agent.py
examples/md_to_pdf/: .env.sample
examples/md_to_pdf/src/md_to_pdf/: agent.py  example.py
examples/md_to_pdf/src/md_to_pdf/prompts/: text_to_pdf.txt
examples/md_to_pdf_agent/: .env.sample  README.md  pyproject.toml
examples/md_to_pdf_agent/src/md_to_pdf/prompts/: agent.txt
examples/md_to_pdf_agent/src/md_to_pdf_agent/: agent.py  example.py
examples/md_to_pptx_agent/: README.md  pyproject.toml
examples/md_to_pptx_agent/src/md_to_pptx_agent/: agent.py
examples/minimal_client_usage/: README.md  pyproject.toml
examples/minimal_client_usage/src/minimal_client_usage/: main.py
examples/minimal_langchain_tools/: README.md  pyproject.toml
examples/minimal_langchain_tools/src/minimal_langchain_tools/: main.py
examples/pdf_to_images_agent/: .env.sample  README.md  pyproject.toml
examples/pdf_to_images_agent/src/pdf_to_images_agent/: agent.py
examples/web_page_to_slide/: pyproject.toml
examples/web_page_to_slide/artifacts/: web_template.pptx
examples/web_page_to_slide/src/web_page_to_slide/: agent.py
middleman_ai/: __init__.py  client.py
middleman_ai/cli/: main.py
middleman_ai/langchain_tools/: json_to_pptx.py  md_to_pptx.py
src/middleman_ai/: client.py  models.py
src/middleman_ai/cli/: main.py
src/middleman_ai/langchain_tools/: __init__.py  json_to_pptx.py  md_to_docx.py  md_to_pdf.py  md_to_pptx.py  pdf_to_page_images.py
src/middleman_ai/mcp/: server.py
tests/: conftest.py  test_client.py  test_client_vcr.py  test_langchain_tools.py  test_langchain_tools_template_id.py  test_langchain_tools_vcr.py  test_mcp.py  vcr_utils.py
tests/cassettes/: test_docx_to_page_images_tool_vcr.yaml  test_docx_to_page_images_vcr.yaml  test_json_to_pptx_analyze_tool_vcr.yaml  test_json_to_pptx_analyze_v2_vcr.yaml  test_json_to_pptx_execute_tool_vcr.yaml  test_json_to_pptx_execute_v2_vcr.yaml  test_json_to_pptx_execute_v2_with_images_vcr.yaml  test_list_tools_vcr.yaml  test_md_to_docx_tool_vcr.yaml  test_md_to_docx_vcr.yaml  test_md_to_docx_with_template_id_vcr.yaml  test_md_to_pdf_tool_vcr.yaml  test_md_to_pdf_tool_with_template_id_vcr.yaml  test_md_to_pdf_vcr.yaml  test_md_to_pdf_with_template_id_vcr.yaml  test_md_to_pptx_tool_vcr.yaml  test_md_to_pptx_vcr.yaml  test_mermaid_to_image_vcr.yaml  test_pdf_to_page_images_tool_vcr.yaml  test_pdf_to_page_images_vcr.yaml  test_pptx_to_page_images_tool_vcr.yaml  test_pptx_to_page_images_vcr.yaml  test_xlsx_to_page_images_tool_vcr.yaml  test_xlsx_to_page_images_vcr.yaml
tests/cli/: conftest.py  test_cli.py  test_mcp_cli.py
