[project]
name = "middleman-ai"
version = "0.1.0"
description = "Python client SDK for Middleman.ai API"
authors = [{ name = "Generative Agents, Inc." }]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "langchain-core>=0.3.0",
    "typing-extensions>=4.8.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = ["RUF001", "RUF002", "RUF022", "N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.uv]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.6",
    "types-requests>=2.32.0.20241016",
]
